# Wine-Quality-Prediction-Data-Science

./: Python Project Initialisation Script.bat  README.md  pyproject.toml
src/: A2RandomSample.csv  A2dataCleaned.csv  assignment2.ipynb  main.py
